[package]
name = "loglens-core"
version = "0.1.1"
edition = "2021"
license = "MIT"

# --- REQUIRED METADATA ---
description = "A lightning-fast, structured log parsing and query engine (JSON/Logfmt). Powers the LogLens CLI."
repository = "https://github.com/Caelrith/loglens-core"
homepage = "https://getloglens.com"
documentation = "https://docs.rs/loglens-core"

# Helps people find you on crates.io
keywords = ["log", "parser", "json", "logfmt", "query"]
categories = ["parsing", "command-line-interface"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logfmt = "0.0.2"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"